--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -66,6 +66,7 @@ adjutant_service_adminuri: "{{ adjutant_service_adminuri_proto }}://{{ internal_
 adjutant_service_adminurl: "{{ adjutant_service_adminuri }}/v1/"
 adjutant_service_internaluri: "{{ adjutant_service_internaluri_proto }}://{{ internal_lb_vip_address }}:{{ adjutant_service_port }}"
 adjutant_service_internalurl: "{{ adjutant_service_internaluri }}/v1/"
+adjutant_horizon_publicurl: "{{ openstack_service_publicuri_proto | default(adjutant_service_proto) }}://{{ external_lb_vip_address }}/"
 
 #: Set this to false to disable API service through Apache + mod_wsgi
 adjutant_use_mod_wsgi: true
@@ -94,6 +95,13 @@ adjutant_ssl_self_signed_subject: "/C=US/ST=Texas/L=San Antonio/O=IT/CN={{ inter
 #adjutant_user_ssl_cert: <path to cert on ansible deployment host>
 #adjutant_user_ssl_key: <path to cert on ansible deployment host>
 #adjutant_user_ssl_ca_cert: <path to cert on ansible deployment host>
+
+adjutant_email_backend: django.core.mail.backends.console.EmailBackend
+adjutant_email_host: localhost
+adjutant_email_port: 25
+adjutant_email_host_user: adjutant
+adjutant_email_use_tls: False
+adjutant_email_use_ssl: False
 
 adjutant_adjutant_conf_overrides: {}
 adjutant_api_init_overrides: {}
