--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -96,7 +96,7 @@ adjutant_ssl_self_signed_subject: "/C=US/ST=Texas/L=San Antonio/O=IT/CN={{ inter
 #adjutant_user_ssl_key: <path to cert on ansible deployment host>
 #adjutant_user_ssl_ca_cert: <path to cert on ansible deployment host>
 
-adjutant_email_backend: django.core.mail.backends.console.EmailBackend
+adjutant_email_backend: django.core.mail.backends.smtp.EmailBackend
 adjutant_email_host: localhost
 adjutant_email_port: 587
 adjutant_email_host_user: adjutant
