--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -131,6 +131,96 @@ adjutant_role_mapping:
     - project_mod
     - heat_stack_owner
     - _member_
+adjutant_default_quota_size: small
+adjutant_quota_autoapprove_days: 30
+adjutant_quota_sizes:
+  small:
+    cinder:
+      gigabytes: 5000
+      snapshots: 50
+      volumes: 20
+    nova:
+      instances: 10
+      cores: 20
+      ram: 65536
+      floating_ips: 10
+      fixed_ips: 0
+      metadata_items: 128
+      injected_files: 5
+      injected_file_content_bytes: 10240
+      key_pairs: 50
+      security_groups: 20
+      security_group_rules: 100
+    neutron:
+      floatingip: 10
+      network: 3
+      port: 50
+      router: 3
+      security_group: 20
+      security_group_rule: 100
+      subnet: 3
+  medium:
+    cinder:
+      gigabytes: 10000
+      volumes: 100
+      snapshots: 300
+    nova:
+      metadata_items: 128
+      injected_file_content_bytes: 10240
+      ram: 327680
+      floating_ips: 25
+      key_pairs: 50
+      instances: 50
+      security_group_rules: 400
+      injected_files: 5
+      cores: 100
+      fixed_ips: 0
+      security_groups: 50
+    neutron:
+      security_group_rule: 400
+      subnet: 5
+      network: 5
+      floatingip: 25
+      security_group: 50
+      router: 5
+      port: 250
+  large:
+    cinder:
+      gigabytes: 50000
+      volumes: 200
+      snapshots: 600
+    nova:
+      metadata_items: 128
+      injected_file_content_bytes: 10240
+      ram: 655360
+      floating_ips: 50
+      key_pairs: 50
+      instances: 100
+      security_group_rules: 800
+      injected_files: 5
+      cores: 200
+      fixed_ips: 0
+      security_groups: 100
+    neutron:
+      security_group_rule: 800
+      subnet: 10
+      network: 10
+      floatingip: 50
+      security_group: 100
+      router: 10
+      port: 500
+
+adjutant_quota_sizes_asc:
+  - small
+  - medium
+  - large
+adjutant_quota_services:
+  "*":
+    - cinder
+    - neutron
+    - nova
+    # Additonal Quota Service
+    # - octavia
 
 adjutant_adjutant_conf_overrides: {}
 adjutant_api_init_overrides: {}
