--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -37,7 +37,7 @@ adjutant_bin: "/openstack/venvs/adjutant-{{ adjutant_venv_tag }}/bin"
 adjutant_venv_download: "{{ not adjutant_developer_mode | bool }}"
 adjutant_venv_download_url: http://127.0.0.1/venvs/untagged/ubuntu/adjutant.tgz
 
-adjutant_git_repo: https://git.openstack.org/openstack/adjutant
+adjutant_git_repo: https://opendev.org/openstack/adjutant
 adjutant_git_install_branch: stable/queens
 
 adjutant_developer_constraints:
