--- a/tox.ini
+++ b/tox.ini
@@ -31,10 +31,20 @@ setenv =
 
 
 [testenv:docs]
+deps = -r{toxinidir}/doc/requirements.txt
 commands=
     bash -c "rm -rf doc/build"
     doc8 doc
-    python setup.py build_sphinx
+    sphinx-build -W --keep-going -b html doc/source doc/build/html
+
+
+[testenv:pdf-docs]
+deps = {[testenv:docs]deps}
+whitelist_externals =
+  make
+commands =
+  sphinx-build -W --keep-going -b latex doc/source doc/build/pdf
+  make -C doc/build/pdf
 
 
 [doc8]
@@ -43,8 +53,9 @@ extensions = .rst
 
 
 [testenv:releasenotes]
+deps = -r{toxinidir}/doc/requirements.txt
 commands =
-    sphinx-build -a -E -W -d releasenotes/build/doctrees -b html releasenotes/source releasenotes/build/html
+    sphinx-build -a -E -W -d releasenotes/build/doctrees --keep-going -b html releasenotes/source releasenotes/build/html
 
 
 # environment used by the -infra templated docs job
