--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -27,81 +27,122 @@
   tags:
     - always
 
-- name: Check init system
-  command: cat /proc/1/comm
-  changed_when: false
-  register: _pid1_name
+- import_tasks: db_setup.yml
+  when: inventory_hostname == groups['adjutant_all'][0]
+  vars:
+    _oslodb_setup_host: "{{ adjutant_galera_setup_host }}"
+    _oslodb_ansible_python_interpreter: "{{ adjutant_galera_setup_python_interpreter }}"
+    _oslodb_setup_endpoint: "{{ adjutant_galera_address }}"
+    _oslodb_setup_port: "{{ adjutant_galera_port }}"
+    _oslodb_databases:
+      - name: "{{ adjutant_galera_database }}"
+        users:
+          - username: "{{ adjutant_galera_user }}"
+            password: "{{ adjutant_galera_password }}"
   tags:
-    - always
+    - common-db
+    - adjutant-config
 
-- name: Set the name of pid1
-  set_fact:
-    pid1_name: "{{ _pid1_name.stdout }}"
-  tags:
-    - always
-
-- include: adjutant_pre_install.yml
-  tags:
-    - adjutant-install
-
-- name: Install distro packages
-  package:
-    pkg: virtualenv
-    state: present
-    update_cache: "{{ (ansible_pkg_mgr == 'apt') | ternary('yes', omit) }}"
-    cache_valid_time: "{{ (ansible_pkg_mgr == 'apt') | ternary(cache_timeout, omit) }}"
-  register: install_packages
-  until: install_packages|success
-  retries: 5
-  delay: 2
+- import_tasks: adjutant_pre_install.yml
   tags:
     - adjutant-install
 
 - name: Install the python venv
   import_role:
-    name: "ansible-role-python_venv_build"
+    name: "python_venv_build"
   vars:
     venv_python_executable: "{{ adjutant_venv_python_executable }}"
+    venv_build_constraints: "{{ adjutant_git_constraints }}"
     venv_build_distro_package_list: "{{ adjutant_devel_distro_packages }}"
     venv_install_destination_path: "{{ adjutant_bin | dirname }}"
-    venv_install_distro_package_list: "{{ adjutant_distro_packages }}"
-    venv_pip_install_args: "{{ adjutant_pip3_install_args }}"
-    venv_pip_packages: "{{ adjutant_pip3_packages }}"
+    venv_pip_install_args: "{{ adjutant_pip_install_args }}"
+    venv_pip_packages: "{{ adjutant_pip_packages }}"
     venv_facts_when_changed:
       - section: "adjutant"
         option: "venv_tag"
         value: "{{ adjutant_venv_tag }}"
-    venv_rebuild: "{{ adjutant_venv_rebuild | default('no') }}"
-    venv_wheel_build_enable: false
   tags:
     - adjutant-install
 
-- include: adjutant_post_install.yml
+- import_tasks: adjutant_post_install.yml
   static: no
   tags:
     - adjutant-config
 
-- include: adjutant_domain_setup.yml
+- import_tasks: adjutant_db_sync.yml
   when: inventory_hostname == groups['adjutant_all'][0]
   tags:
     - adjutant-config
 
-- include: adjutant_db_setup.yml
+- import_tasks: service_setup.yml
+  vars:
+    _service_adminuri_insecure: "{{ keystone_service_adminuri_insecure }}"
+    _service_in_ldap: "{{ adjutant_service_in_ldap }}"
+    _service_setup_host: "{{ adjutant_service_setup_host }}"
+    _service_setup_host_python_interpreter: "{{ adjutant_service_setup_host_python_interpreter }}"
+    _service_project_name: "{{ adjutant_service_project_name }}"
+    _service_region: "{{ adjutant_service_region }}"
+    _service_users:
+      - name: "{{ adjutant_service_user_name }}"
+        password: "{{ adjutant_service_password }}"
+        role: "{{ adjutant_role_name }}"
+      - role: "project_mod"
+      - role: "project_admin"
+    _service_catalog:
+      - name: "{{ adjutant_service_name }}"
+        type: "{{ adjutant_service_type }}"
+        description: "{{ adjutant_service_description }}"
+    _service_endpoints:
+      - interface: "public"
+        url: "{{ adjutant_service_publicurl }}"
+        service: "{{ adjutant_service_name }}"
+      - interface: "internal"
+        url: "{{ adjutant_service_internalurl }}"
+        service: "{{ adjutant_service_name }}"
+      - interface: "admin"
+        url: "{{ adjutant_service_adminurl }}"
+        service: "{{ adjutant_service_name }}"
   when: inventory_hostname == groups['adjutant_all'][0]
   tags:
     - adjutant-config
 
-- include: "adjutant_init_{{ ansible_service_mgr }}.yml"
-  static: no
+- name: Run the systemd service role
+  include_role:
+    name: systemd_service
+  vars:
+    systemd_user_name: "{{ adjutant_system_user_name }}"
+    systemd_group_name: "{{ adjutant_system_group_name }}"
+    systemd_tempd_prefix: openstack
+    systemd_slice_name: adjutant
+    systemd_lock_path: /var/lock/adjutant
+    systemd_CPUAccounting: true
+    systemd_BlockIOAccounting: true
+    systemd_MemoryAccounting: true
+    systemd_TasksAccounting: true
+    systemd_services:
+      - service_name: "{{ service_var.service_name }}"
+        enabled: yes
+        state: started
+        execstarts: "{{ service_var.execstarts }}"
+        execreloads: "{{ service_var.execreloads | default([]) }}"
+        config_overrides: "{{ service_var.init_config_overrides }}"
+  with_items: "{{ filtered_adjutant_services }}"
+  loop_control:
+    loop_var: service_var
   tags:
-    - adjutant-setup
+    - adjutant-config
+    - systemd-service
 
-- include: adjutant_apache.yml
-  static: no
-  when:
-    - adjutant_use_mod_wsgi | bool
+- name: Import uwsgi role
+  import_role:
+    name: uwsgi
+  vars:
+    uwsgi_services: "{{ uwsgi_adjutant_services }}"
+    uwsgi_install_method: "source"
   tags:
-    - adjutant-setup
+    - adjutant-install
+    - adjutant-config
+    - uwsgi
 
 - name: Flush handlers
   meta: flush_handlers
