--- a/vars/debian.yml
+++ b/vars/debian.yml
@@ -1,5 +1,5 @@
 ---
-# Copyright 2015, Rackspace US, Inc.
+# Copyright 2016, Walmart Stores, Inc.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -13,9 +13,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-adjutant_venv_tag: "testing"
-adjutant_developer_mode: true
-adjutant_galera_address: "{{ hostvars[groups['galera_all'][0]]['ansible_host'] }}"
-adjutant_galera_password: "SuperSecrete"
-adjutant_service_password: "secrete"
-adjutant_secret_key: "secretkey"
+## APT Cache options
+cache_timeout: 600
+
+adjutant_devel_distro_packages:
+  - cmake
+  - gcc
+  - python3-dev
+  - git-core
+  - libsystemd-dev
