--- a/vars/redhat.yml
+++ b/vars/redhat.yml
@@ -13,23 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-adjutant_distro_packages:
-  - git
-  - httpd
-  - httpd-tools
-  - mod_wsig
-  - libmysqlclient-dev
+adjutant_devel_distro_packages:
+  - git-core
   - openssl-devel
-  - virtualenv
-  - python-keystoneclient
-
-adjutant_system_service_name: httpd
-adjutant_apache_config:
-  - { src: "adjutant-ports.conf.j2", dest: "/etc/httpd/conf.d/ports.conf" }
-  - { src: "adjutant-httpd.conf.j2", dest: "/etc/httpd/conf.d/adjutant-httpd.conf" }
-adjutant_apache_default_sites:
-  - "/etc/httpd/conf.d/userdir.conf"
-  - "/etc/httpd/conf.d/welcome.conf"
-  - "/etc/httpd/conf.d/ssl.conf"
-adjutant_apache_conf: "/etc/httpd/conf/httpd.conf"
-adjutant_apache_security_conf: "{{ adjutant_apache_conf }}"
+  - systemd-devel
