Trigger uwsgi restart
When we were migrating service to uwsgi usage, we clean forgot to
trigger uwsgi restart on service config change.
We also use modern "listen" for service handlers that not using uwsgi.

Depends-On: https://review.opendev.org/c/openstack/openstack-ansible/+/756310
Change-Id: I360e6c7bc1910d3c013ff225a25f95a191252639

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -13,12 +13,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-- name: Restart adjutant services
-  command: "/bin/true"
-  notify:
-    - Stop services
-    - Start services
-
 - name: Stop services
   service:
     name: "{{ item.value.service_name }}"
@@ -31,6 +25,8 @@
   until: _stop is success
   retries: 5
   delay: 2
+  listen:
+    - Restart adjutant services
 
 - name: Start services
   service:
@@ -46,3 +42,5 @@
   until: _start is success
   retries: 5
   delay: 2
+  listen:
+    - Restart adjutant services
