--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -16,10 +16,9 @@
 ## Verbosity Options
 debug: False
 
-# Set the package install state for distribution and pip packages
+# Set the package install state for distribution packages
 # Options are 'present' and 'latest'
-adjutant_package_state: "latest"
-adjutant_pip_package_state: "latest"
+adjutant_package_state: "{{ package_state | default('latest') }}"
 
 adjutant_service_user_name: adjutant
 
@@ -48,19 +47,19 @@ adjutant_galera_database: adjutant
 adjutant_galera_user: adjutant
 adjutant_galera_use_ssl: "{{ galera_use_ssl | default(False) }}"
 adjutant_galera_ssl_ca_cert: "{{ galera_ssl_ca_cert | default('/etc/ssl/certs/galera-ca.pem') }}"
-adjutant_galera_port: 3306
+adjutant_galera_port: "{{ galera_port | default('3306') }}"
 adjutant_galera_setup_host: "{{ openstack_db_setup_host | default('localhost') }}"
 adjutant_galera_setup_python_interpreter: "{{ openstack_db_setup_python_interpreter | default((adjutant_galera_setup_host == 'localhost') | ternary(ansible_playbook_python, ansible_python['executable'])) }}"
 
 ## Service Type and Data
 adjutant_role_name: admin
-adjutant_service_region: RegionOne
+adjutant_service_region: "{{ service_region | default('RegionOne') }}"
 adjutant_service_name: adjutant
 adjutant_service_type: registration
 adjutant_service_description: "Adjutant Registration Service"
 adjutant_service_port: 5050
 adjutant_service_project_name: service
-adjutant_service_in_ldap: false
+adjutant_service_in_ldap: "{{ service_ldap_backend_enabled | default(False) }}"
 adjutant_service_setup_host: "{{ openstack_service_setup_host | default('localhost') }}"
 adjutant_service_setup_host_python_interpreter: "{{ openstack_service_setup_host_python_interpreter | default((adjutant_service_setup_host == 'localhost') | ternary(ansible_playbook_python, ansible_python['executable'])) }}"
 adjutant_bind_address: "{{ openstack_service_bind_address | default('0.0.0.0') }}"
