--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -29,7 +29,7 @@ adjutant_system_comment: adjutant system user
 adjutant_system_shell: /bin/false
 adjutant_system_home_folder: "/var/lib/{{ adjutant_system_user_name }}"
 
-adjutant_venv_tag: untagged
+adjutant_venv_tag: "{{ venv_tag | default('untagged') }}"
 adjutant_bin: "/openstack/venvs/adjutant-{{ adjutant_venv_tag }}/bin"
 
 adjutant_git_repo: https://opendev.org/openstack/adjutant
