--- a/vars/redhat.yml
+++ b/vars/redhat.yml
@@ -13,6 +13,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+adjutant_distro_packages:
+  - python3-devel
+  - gcc
+
 adjutant_devel_distro_packages:
   - git-core
   - openssl-devel
