--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-minversion = 2.0
+minversion = 3.18.0
 skipsdist = True
 envlist = docs,linters,functional
 
@@ -20,7 +20,7 @@ passenv =
     HTTPS_PROXY
     no_proxy
     NO_PROXY
-whitelist_externals =
+allowlist_externals =
     bash
 setenv =
     PYTHONUNBUFFERED=1
@@ -40,7 +40,7 @@ commands=
 
 [testenv:pdf-docs]
 deps = {[testenv:docs]deps}
-whitelist_externals =
+allowlist_externals =
   make
 commands =
   sphinx-build -W --keep-going -b latex doc/source doc/build/pdf
