Use config_template as a collection
Since we still use ceph-ansible that has their own implementation of
config_template module it's worth to use mentioned module as a collection
explicitly.

Depends-On: https://review.opendev.org/c/openstack/openstack-ansible/+/819814



Change-Id: I7523db3a60eb6db0bf19d7849e62ad167ce9da14

--- a/tasks/adjutant_post_install.yml
+++ b/tasks/adjutant_post_install.yml
@@ -16,7 +16,7 @@
 # limitations under the License.
 
 - name: Drop adjutant Config(s)
-  config_template:
+  openstack.config_template.config_template:
     src: "{{ item.src }}"
     dest: "{{ item.dest }}"
     owner: "{{ adjutant_system_user_name }}"
