Filter out Django version
Until Adjutant won't catch up with u-c Django version, we should
allow operations to proceed.

This patch should be reverted once Adjutant catch up with u-c.

Change-Id: I2611abff3a13404e7ad033a96303fce0aa01b2ed

--- a/tasks/adjutant_install.yml
+++ b/tasks/adjutant_install.yml
@@ -13,12 +13,20 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# NOTE(noonedeadpunk): Adjutant is incompatible with provided in u-c Django version
+#                      While it's ajutant issue, we should workaround this until it got fixed.
+- name: Retrieve the constraints URL
+  uri:
+    url: "{{ adjutant_upper_constraints_url }}"
+    return_content: yes
+  register: _u_c_contents
+
 - name: Install the python venv
   import_role:
     name: "python_venv_build"
   vars:
     venv_python_executable: "{{ adjutant_venv_python_executable }}"
-    venv_build_constraints: "{{ adjutant_git_constraints }}"
+    venv_build_constraints: "{{ _u_c_contents.content.split('\n') | reject('match', '^(Django)=') | list }}"
     venv_build_distro_package_list: "{{ adjutant_devel_distro_packages }}"
     venv_install_destination_path: "{{ adjutant_bin | dirname }}"
     venv_pip_install_args: "{{ adjutant_pip_install_args }}"
