--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist = docs,linters,functional
 
 
 [testenv]
-usedevelop = True
+usedevelop = False
 install_command =
     pip install -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt?h=stable/queens} {opts} {packages}
 deps =
