Replace deprecated UPPER_CONSTRAINTS_FILE variable
UPPER_CONSTRAINTS_FILE is old name and deprecated

[1] https://zuul-ci.org/docs/zuul-jobs/python-roles.html#rolevar-tox.tox_constraints_file

Change-Id: I4622b293175369aa1d7681a8f710f80dc298b709

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,8 @@ envlist = docs,linters,functional
 [testenv]
 usedevelop = False
 install_command =
-    pip install -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt?h=stable/queens} {opts} {packages}
+    pip install -c{env:TOX_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master} {opts} {packages}
+
 deps =
     -r{toxinidir}/test-requirements.txt
 commands =
