Convert include to include_tasks
Include is deprecated, additionally include_tasks is now faster.

Signed-off-by: Kevin Carter <kevin@cloudnull.com>
Change-Id: Ie443752e2e93a9aa4323425bdf0d9caf38a04281

--- a/extras/os-adjutant-install.yml
+++ b/extras/os-adjutant-install.yml
@@ -17,8 +17,8 @@
   hosts: adjutant_all
   user: root
   pre_tasks:
-    - include: common-tasks/os-lxc-container-setup.yml
-    - include: common-tasks/os-log-dir-setup.yml
+    - ansible.builtin.include_tasks: common-tasks/os-lxc-container-setup.yml
+    - ansible.builtin.include_tasks: common-tasks/os-log-dir-setup.yml
       vars:
         log_dirs:
           - src: "/openstack/log/{{ inventory_hostname }}-adjutant"
