Ensure service is restarted on unit file changes
At the moment we don't restart services if systemd unit file is changed.

We knowingly prevent systemd_service role handlers to execute
by providing `state: started` as otherwise service will be restarted twice.
With that now  we ensure that role handlers will also listen for systemd
unit changes.

Change-Id: I8ce4f18e853ee0c55970012f4c40574960607441

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -26,6 +26,7 @@
   delay: 2
   listen:
     - Restart adjutant services
+    - systemd service changed
 
 - name: Start services
   service:
@@ -42,3 +43,4 @@
   delay: 2
   listen:
     - Restart adjutant services
+    - systemd service changed
