Switch back to use constrained Django version
Supposedly, Adjutant has upgraded used Django version and constrained
version can be used now, since upper limit for Django is not defined
anymore in project requirements [1]

We also fix ansible_facts usage with same commit to resolve
circular dependency.

[1] https://opendev.org/openstack/adjutant/src/commit/df8c3e4a8b70be8697ac46f0acec9169752b4698/requirements.txt#L3

Change-Id: Ie5c4f5528a25d0a13c12749c1d7af09377792342

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -77,7 +77,7 @@ adjutant_horizon_publicurl: "{{ openstack_service_publicuri_proto | default(adju
 # uWSGI settings
 adjutant_wsgi_threads: 1
 adjutant_wsgi_processes_max: 16
-adjutant_wsgi_processes: "{{ [[(ansible_processor_vcpus//ansible_processor_threads_per_core)|default(1), 1] | max * 2, adjutant_wsgi_processes_max] | min }}"
+adjutant_wsgi_processes: "{{ [[(ansible_facts['processor_vcpus']//ansible_facts['processor_threads_per_core'])|default(1), 1] | max * 2, adjutant_wsgi_processes_max] | min }}"
 adjutant_use_uwsgi: True
 
 adjutant_email_backend: django.core.mail.backends.smtp.EmailBackend
